@@ -71,9 +71,9 @@ file \fB/usr/local/etc/smartd.conf\fP (Windows: \fBEXEDIR/smartd.conf\fP).
 If the configuration file is subsequently modified, \fBsmartd\fP
 can be told to re-read the configuration file by sending it a
 \fBHUP\fP signal, for example with the command:
-.fi
+.br
 \fBkillall -HUP smartd\fP.
-.fi
+.br
 .\" %IF OS Windows
 (Windows: See NOTES below.)
 .\" %ENDIF OS Windows
@@ -146,7 +146,6 @@ for \fIall\fP possible SMART errors (corresponding to the \fB\'\-a\'\fP
 Directive in the configuration file; see the \fBsmartd.conf\fP(5) man page).
 
 .SH OPTIONS
-
 .TP
 .B \-A PREFIX, \-\-attributelog=PREFIX
 Writes \fBsmartd\fP attribute information (normalized and raw
@@ -242,7 +241,7 @@ also use:
 .B killall -USR1 smartd
 .fi
 for the same purpose.
-.fi
+.br
 .\" %IF OS Windows
 (Windows: See NOTES below.)
 .\" %ENDIF OS Windows
@@ -446,30 +445,25 @@ information for your copy of \fBsmartd\fP to STDOUT and then exits.
 Please include this information if you are reporting bugs or problems.
 
 .SH EXAMPLES
-
-.B
-smartd
-.fi
+.B smartd
+.br
 Runs the daemon in forked mode. This is the normal way to run
 \fBsmartd\fP.
 Entries are logged to SYSLOG.
 
-.B
-smartd -d -i 30
-.fi
+.B smartd -d -i 30
+.br
 Run in foreground (debug) mode, checking the disk status
 every 30 seconds.
 
-.B
-smartd -q onecheck
-.fi
+.B smartd -q onecheck
+.br
 Registers devices, and checks the status of the devices exactly
 once. The exit status (the shell
 .B $?
 variable) will be zero if all went well, and nonzero if no devices
 were detected or some other problem was encountered.
 
-.fi 
 Note that \fBsmartmontools\fP provides a start-up script in
 \fB/usr/local/etc/rc.d/init.d/smartd\fP which is responsible for starting and
 stopping the daemon via the normal init interface.  Using this script,
@@ -481,8 +475,10 @@ and stop it by using the command:
 .nf
 .B /usr/local/etc/rc.d/init.d/smartd stop
 .fi
+
 .SH CONFIGURATION
 The syntax of the \fBsmartd.conf\fP(5) file is discussed separately.
+
 .SH NOTES
 \fBsmartd\fP
 will make log entries at loglevel 
@@ -615,7 +611,6 @@ checks disks immediately (like \fBSIGUSR1\fP).
 
 .\" %ENDIF OS Windows
 .SH LOG TIMESTAMP TIMEZONE
-
 When \fBsmartd\fP makes log entries, these are time-stamped.  The time
 stamps are in the computer's local time zone, which is generally set
 using either the environment variable \'\fBTZ\fP\' or using a
@@ -628,7 +623,6 @@ time-zone stamps of \fBsmartd\fP might not change.  For some systems,
 set using \fB/etc/localtime\fP. The work-around \fIfails\fP if the
 time-zone is set using the \'\fBTZ\fP\' variable (or a file that it
 points to).
-
 
 .SH RETURN VALUES
 The return value (exit status) of 
@@ -734,21 +728,33 @@ since 2009)
 \fBsmartmontools\-support@lists.sourceforge.net\fP
 
 The following have made large contributions to smartmontools:
-.nf
+.br
 \fBCasper Dik\fP (Solaris SCSI interface)
+.br
 \fBDouglas Gilbert\fP (SCSI subsystem)
+.br
 \fBGuido Guenther\fP (Autoconf/Automake packaging)
+.br
 \fBGeoffrey Keating\fP (Darwin ATA interface)
+.br
 \fBEduard Martinescu\fP (FreeBSD interface)
+.br
 \fBFr\['e]d\['e]ric L. W. Meunier\fP (Web site and Mailing list)
+.br
 \fBGabriele Pohl\fP (Web site and Wiki, conversion from CVS to SVN)
+.br
 \fBKeiji Sawada\fP (Solaris ATA interface)
+.br
 \fBManfred Schwarb\fP (Drive database)
+.br
 \fBSergey Svishchev\fP (NetBSD interface)
+.br
 \fBDavid Snyder and Sergey Svishchev\fP (OpenBSD interface)
+.br
 \fBPhil Williams\fP (User interface and drive database)
+.br
 \fBShengfeng Zhou\fP (Linux/FreeBSD HighPoint RocketRAID interface)
-.fi
+.br
 Many other individuals have made smaller contributions and corrections.
 
 The first smartmontools code was derived from the smartsuite package,
@@ -777,7 +783,6 @@ volume of the \'AT Attachment with Packet Interface-7\' (ATA/ATAPI-7)
 specification Revision 4b.  This documents the SMART functionality which the
 \fBsmartmontools\fP utilities provide access to.
 
-.fi
 The functioning of SMART was originally defined by the SFF-8035i
 revision 2 and the SFF-8055i revision 1.4 specifications.  These are
 publications of the Small Form Factors (SFF) Committee.
